--- a/index.html
+++ b/index.html
@@ -1442,6 +1442,165 @@
                   justify-content: center;
                 "
               >
+                <text>본시 수업</text>
+              </div>
+            </header>
+            <div>
+              <img src="public/na-6.png" />
+            </div>
+          </section>
+          <section data-auto-animate>
+            <header style="display: flex; position: fixed; top: 0">
+              <div class="r-stack">
+                <div
+                  data-id="box1"
+                  style="
+                    background: cyan;
+                    width: 100px;
+                    height: 100px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box2"
+                  style="
+                    background: magenta;
+                    width: 70px;
+                    height: 70px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box3"
+                  style="
+                    background: yellow;
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 200px;
+                  "
+                ></div>
+              </div>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                  margin-left: 50px;
+                "
+              ></div>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                "
+              >
+                <text>본시 수업</text>
+              </div>
+            </header>
+            <div>
+              <img src="public/na-7.png" />
+            </div>
+          </section>
+          <section data-auto-animate>
+            <header style="display: flex; position: fixed; top: 0">
+              <div class="r-stack">
+                <div
+                  data-id="box1"
+                  style="
+                    background: cyan;
+                    width: 100px;
+                    height: 100px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box2"
+                  style="
+                    background: magenta;
+                    width: 70px;
+                    height: 70px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box3"
+                  style="
+                    background: yellow;
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 200px;
+                  "
+                ></div>
+              </div>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                  margin-left: 50px;
+                "
+              ></div>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                "
+              >
+                <text>본시 수업</text>
+              </div>
+            </header>
+            <div>
+              <img src="public/na-8.png" />
+            </div>
+          </section>
+          <section data-auto-animate>
+            <header style="display: flex; position: fixed; top: 0">
+              <div class="r-stack">
+                <div
+                  data-id="box1"
+                  style="
+                    background: cyan;
+                    width: 100px;
+                    height: 100px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box2"
+                  style="
+                    background: magenta;
+                    width: 70px;
+                    height: 70px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box3"
+                  style="
+                    background: yellow;
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 200px;
+                  "
+                ></div>
+              </div>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                  margin-left: 50px;
+                "
+              ></div>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                "
+              >
                 <text>결과</text>
               </div>
             </header>
