--- a/index.html
+++ b/index.html
@@ -2681,8 +2681,40 @@
           <section data-auto-animate>
             <h1 class="r-fit-text">개념 기반 교육과정 단원 설계 과정</h1>
             <p>
-              <text style="color: black">전이 설계하기</text>
+              <text style="color: black">전이(단원총괄평가) 설계하기</text>
             </p>
+          </section>
+          <section data-auto-animate>
+            <h1 class="r-fit-text">전이(단원총괄평가) 설계</h1>
+            <p>
+              <ul>
+                <li>GRASPS 방식</li>
+              </ul>
+            </p>
+          </section>
+          <section data-auto-animate>
+            <h1 class="r-fit-text">전이(단원총괄평가) 설계</h1>
+            <div style="display: flex; justify-content:center; align-items: center;">
+              <div style="display: flex; flex-direction: column; padding-right: 25px; border-right: 3px solid black; padding-top: 10px; ">
+                <h3 >GRASPS 방식</h3>
+                <p>
+                  <ul>
+                    <li>
+                    </li>
+                    <li></li>
+                  </ul>
+                </p>
+              </div>
+              <div style="display: flex; flex-direction: column; padding-left: 25px; padding-top: 10px;">
+                <h3 >Erickson 방식</h3>
+                <p>
+                  <ul>
+                    <li></li>
+                    <li></li>
+                  </ul>
+                </p>
+              </div>
+            </div>
           </section>
           <section data-auto-animate>
             <h1 class="r-fit-text">개념 기반 교육과정 단원 설계 과정</h1>
